--- a/project.config
+++ b/project.config
@@ -4,11 +4,13 @@
 	description = Electronic Components
 [access "refs/*"]
 	owner = group user/Andrey Shamis (AndreyShamis)
+	read = group user/symfony.lbook
 [access "refs/for/refs/*"]
 	read = group user/Andrey Shamis (AndreyShamis)
 	push = group user/Andrey Shamis (AndreyShamis)
 	label-Code-Review = -2..+2 group user/Andrey Shamis (AndreyShamis)
 	label-Verified = -1..+1 group user/Andrey Shamis (AndreyShamis)
+	label-Verified = -1..+1 group user/symfony.lbook
 	rebase = group user/Andrey Shamis (AndreyShamis)
 	removeReviewer = group user/Andrey Shamis (AndreyShamis)
 	submit = group user/Andrey Shamis (AndreyShamis)
@@ -20,3 +22,6 @@
 [access "refs/tags/*"]
 	push = group user/Andrey Shamis (AndreyShamis)
 	push = +force group user/Andrey Shamis (AndreyShamis)
+	create = group user/Andrey Shamis (AndreyShamis)
+	createTag = group user/Andrey Shamis (AndreyShamis)
+	createSignedTag = group user/Andrey Shamis (AndreyShamis)
