Modify access rules

--- a/project.config
+++ b/project.config
@@ -19,6 +19,7 @@
 	create = group user/Andrey Shamis (AndreyShamis)
 	push = +force group user/Andrey Shamis (AndreyShamis)
 	pushMerge = group user/Andrey Shamis (AndreyShamis)
+	label-Verified = -1..+1 group user/symfony.lbook
 [access "refs/tags/*"]
 	push = group user/Andrey Shamis (AndreyShamis)
 	push = +force group user/Andrey Shamis (AndreyShamis)
