Modified project settings

--- a/project.config
+++ b/project.config
@@ -26,3 +26,6 @@
 	create = group user/Andrey Shamis (AndreyShamis)
 	createTag = group user/Andrey Shamis (AndreyShamis)
 	createSignedTag = group user/Andrey Shamis (AndreyShamis)
+[receive]
+	requireSignedOffBy = true
+	requireChangeId = true
