--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,30 @@
 # PhpStorm ignores
 .idea/*
 
+/artifacts/
+
+###> symfony/framework-bundle ###
+.env
+/public/bundles/
+/var/
+/var/log/
+/vendor/
+###< symfony/framework-bundle ###
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+###< symfony/webpack-encore-pack ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
+
 # Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
